crates/specforge-parser/tests/snapshots/tests__snapshot_tests__multi_error_diagnostics.snap
---
source: crates/specforge-parser/tests/snapshot_tests.rs
expression: result.errors
---
[
  {
    "message": "syntax error: unexpected '??? {'",
    "span": {
      "file": "test.spec",
      "start_line": 6,
      "start_col": 10,
      "end_line": 10,
      "end_col": 9
    },
    "expected": "a valid block: keyword name \"Title\" {{ fields... }}",
    "found": "??? {"
  }
]
