crates/specforge-parser/tests/snapshots/tests__snapshot_tests__real_world_entities.snap
---
source: crates/specforge-parser/tests/snapshot_tests.rs
expression: result.entities
---
[
  {
    "kind": {
      "raw": "behavior"
    },
    "id": {
      "raw": "parse_spec_file_to_ast"
    },
    "title": "Parse Spec File to AST",
    "fields": {
      "entries": [
        {
          "key": "invariants",
          "value": {
            "ReferenceList": [
              "multi_error_collection",
              "string_interning_consistency"
            ]
          },
          "annotations": []
        },
        {
          "key": "types",
          "value": {
            "ReferenceList": [
              "SpecFile",
              "ParseError",
              "SourceSpan"
            ]
          },
          "annotations": []
        },
        {
          "key": "requires",
          "value": {
            "Block": {
              "entries": [
                {
                  "key": "valid_utf8_input",
                  "value": {
                    "String": "Input buffer is valid UTF-8"
                  },
                  "annotations": []
                }
              ]
            }
          },
          "annotations": []
        },
        {
          "key": "ensures",
          "value": {
            "Block": {
              "entries": [
                {
                  "key": "ast_produced",
                  "value": {
                    "String": "A complete AST is produced"
                  },
                  "annotations": []
                }
              ]
            }
          },
          "annotations": []
        },
        {
          "key": "contract",
          "value": {
            "String": "Given a source file\nWhen parsed by the Tree-sitter grammar\nThen an AST is produced with all entities"
          },
          "annotations": []
        },
        {
          "key": "verify",
          "value": {
            "VerifyList": [
              {
                "kind": "unit",
                "description": "produces AST for minimal valid file"
              },
              {
                "kind": "integration",
                "description": "parses all .spec files in project"
              }
            ]
          },
          "annotations": []
        }
      ]
    },
    "raw_body": "\n    invariants [multi_error_collection, string_interning_consistency]\n    types      [SpecFile, ParseError, SourceSpan]\n\n    requires {\n        valid_utf8_input \"Input buffer is valid UTF-8\"\n    }\n\n    ensures {\n        ast_produced \"A complete AST is produced\"\n    }\n\n    contract \"\"\"\n        Given a source file\n        When parsed by the Tree-sitter grammar\n        Then an AST is produced with all entities\n    \"\"\"\n\n    verify unit \"produces AST for minimal valid file\"\n    verify integration \"parses all .spec files in project\"\n",
    "span": {
      "file": "behaviors/parsing.spec",
      "start_line": 5,
      "start_col": 1,
      "end_line": 25,
      "end_col": 2
    },
    "methods": []
  },
  {
    "kind": {
      "raw": "ref"
    },
    "id": {
      "raw": "gh.issue:1"
    },
    "title": "Initial parser",
    "fields": {
      "entries": [
        {
          "key": "scheme",
          "value": {
            "String": "gh"
          },
          "annotations": []
        },
        {
          "key": "ref_kind",
          "value": {
            "String": "issue"
          },
          "annotations": []
        },
        {
          "key": "identifier",
          "value": {
            "String": "1"
          },
          "annotations": []
        }
      ]
    },
    "raw_body": null,
    "span": {
      "file": "behaviors/parsing.spec",
      "start_line": 27,
      "start_col": 1,
      "end_line": 27,
      "end_col": 32
    },
    "methods": []
  },
  {
    "kind": {
      "raw": "behavior"
    },
    "id": {
      "raw": "recover_from_syntax_errors"
    },
    "title": "Recover from Syntax Errors",
    "fields": {
      "entries": [
        {
          "key": "invariants",
          "value": {
            "ReferenceList": [
              "multi_error_collection"
            ]
          },
          "annotations": []
        },
        {
          "key": "types",
          "value": {
            "ReferenceList": [
              "ParseError"
            ]
          },
          "annotations": []
        },
        {
          "key": "status",
          "value": {
            "Identifier": "planned"
          },
          "annotations": []
        },
        {
          "key": "verify",
          "value": {
            "VerifyList": [
              {
                "kind": "property",
                "description": "N errors produce N diagnostics"
              }
            ]
          },
          "annotations": []
        }
      ]
    },
    "raw_body": "\n    invariants [multi_error_collection]\n    types      [ParseError]\n    status     planned\n    verify property \"N errors produce N diagnostics\"\n",
    "span": {
      "file": "behaviors/parsing.spec",
      "start_line": 29,
      "start_col": 1,
      "end_line": 34,
      "end_col": 2
    },
    "methods": []
  }
]
