crates/specforge-parser/tests/snapshots/tests__snapshot_tests__snap_all_field_value_types.snap
---
source: crates/specforge-parser/tests/snapshot_tests.rs
expression: "parse_ok(source, \"test.spec\").entities"
---
[
  {
    "kind": {
      "raw": "behavior"
    },
    "id": {
      "raw": "test_values"
    },
    "title": "Test Values",
    "fields": {
      "entries": [
        {
          "key": "name",
          "value": {
            "String": "a string"
          },
          "annotations": []
        },
        {
          "key": "count",
          "value": {
            "Integer": 42
          },
          "annotations": []
        },
        {
          "key": "enabled",
          "value": {
            "Boolean": true
          },
          "annotations": []
        },
        {
          "key": "disabled",
          "value": {
            "Boolean": false
          },
          "annotations": []
        },
        {
          "key": "created",
          "value": {
            "Date": "2024-01-15"
          },
          "annotations": []
        },
        {
          "key": "status",
          "value": {
            "Identifier": "planned"
          },
          "annotations": []
        },
        {
          "key": "tags",
          "value": {
            "ReferenceList": [
              "alpha",
              "beta",
              "gamma"
            ]
          },
          "annotations": []
        },
        {
          "key": "labels",
          "value": {
            "StringList": [
              "tag-one",
              "tag-two"
            ]
          },
          "annotations": []
        },
        {
          "key": "config",
          "value": {
            "Block": {
              "entries": [
                {
                  "key": "timeout",
                  "value": {
                    "Integer": 30
                  },
                  "annotations": []
                },
                {
                  "key": "retries",
                  "value": {
                    "Integer": 3
                  },
                  "annotations": []
                }
              ]
            }
          },
          "annotations": []
        },
        {
          "key": "verify",
          "value": {
            "VerifyList": [
              {
                "kind": "unit",
                "description": "it works"
              },
              {
                "kind": "property",
                "description": "always valid"
              }
            ]
          },
          "annotations": []
        }
      ]
    },
    "raw_body": "\n    name \"a string\"\n    count 42\n    enabled true\n    disabled false\n    created 2024-01-15\n    status planned\n    tags [alpha, beta, gamma]\n    labels [\"tag-one\", \"tag-two\"]\n    config {\n        timeout 30\n        retries 3\n    }\n    verify unit \"it works\"\n    verify property \"always valid\"\n",
    "span": {
      "file": "test.spec",
      "start_line": 2,
      "start_col": 1,
      "end_line": 17,
      "end_col": 2
    },
    "methods": []
  }
]
