crates/specforge-parser/tests/snapshots/tests__snapshot_tests__snap_union_types.snap
---
source: crates/specforge-parser/tests/snapshot_tests.rs
expression: "parse_ok(source, \"test.spec\").entities"
---
[
  {
    "kind": {
      "raw": "type"
    },
    "id": {
      "raw": "FieldValue"
    },
    "title": null,
    "fields": {
      "entries": [
        {
          "key": "variants",
          "value": {
            "VariantList": [
              "StringValue",
              "ReferenceList",
              "Block"
            ]
          },
          "annotations": []
        }
      ]
    },
    "raw_body": null,
    "span": {
      "file": "test.spec",
      "start_line": 2,
      "start_col": 1,
      "end_line": 2,
      "end_col": 54
    },
    "methods": []
  },
  {
    "kind": {
      "raw": "type"
    },
    "id": {
      "raw": "McpErrorCode"
    },
    "title": null,
    "fields": {
      "entries": [
        {
          "key": "variants",
          "value": {
            "VariantList": [
              "invalid_input",
              "compilation_failed",
              "entity_not_found"
            ]
          },
          "annotations": []
        }
      ]
    },
    "raw_body": null,
    "span": {
      "file": "test.spec",
      "start_line": 4,
      "start_col": 1,
      "end_line": 4,
      "end_col": 80
    },
    "methods": []
  },
  {
    "kind": {
      "raw": "type"
    },
    "id": {
      "raw": "JsonRpcErrorCode"
    },
    "title": null,
    "fields": {
      "entries": [
        {
          "key": "variants",
          "value": {
            "VariantList": [
              "-32700",
              "-32600",
              "-32601"
            ]
          },
          "annotations": []
        }
      ]
    },
    "raw_body": null,
    "span": {
      "file": "test.spec",
      "start_line": 6,
      "start_col": 1,
      "end_line": 6,
      "end_col": 49
    },
    "methods": []
  }
]
